Fix AC_PATH_PROG arguments

--- a/configure.ac
+++ b/configure.ac
@@ -28,32 +28,32 @@ AC_PATH_PROG(CAT, cat, no, /bin:/usr/bin:/usr/local/bin)
 if test "x$CAT" = xno; then
 	AC_MSG_ERROR([*** Cannot find cat program])
 fi
-AC_PATH_PROG(CHMOD, chmod, :, /bin:/usr/bin:/usr/local/bin)
+AC_PATH_PROG(CHMOD, chmod, no, /bin:/usr/bin:/usr/local/bin)
 if test "x$CHMOD" = xno; then
 	AC_MSG_ERROR([*** Cannot find chmod program])
 fi
-AC_PATH_PROG(TOUCH, touch, :, /bin:/usr/bin:/usr/local/bin)
+AC_PATH_PROG(TOUCH, touch, no, /bin:/usr/bin:/usr/local/bin)
 if test "x$TOUCH" = xno; then
 	AC_MSG_ERROR([*** Cannot find touch program])
 fi
 
-AC_PATH_PROGS(GREP, grep egrep, :, /bin:/usr/bin:/usr/local/bin)
-if test "x$GREP" = x; then
+AC_PATH_PROGS(GREP, grep egrep, no, /bin:/usr/bin:/usr/local/bin)
+if test "x$GREP" = xno; then
 	AC_MSG_ERROR([*** Cannot find grep program(grep, egrep)])
 fi
 
-AC_PATH_PROG(FIND, find, :, /bin:/usr/bin:/usr/local/bin)
-if test "x$FIND" = x; then
+AC_PATH_PROG(FIND, find, no, /bin:/usr/bin:/usr/local/bin)
+if test "x$FIND" = xno; then
 	AC_MSG_ERROR([*** Cannot find find program])
 fi
 
-AC_PATH_PROG(SED, sed, :, /bin:/usr/bin:/usr/local/bin)
-if test "x$SED" = x; then
+AC_PATH_PROG(SED, sed, no, /bin:/usr/bin:/usr/local/bin)
+if test "x$SED" = xno; then
 	AC_MSG_ERROR([*** Cannot find sed program])
 fi
 
-AC_PATH_PROG(CPANM, cpanm, :, .:~/bin:/bin:/usr/bin:/usr/local/bin)
-if test "x$CPANM" = x; then
+AC_PATH_PROG(CPANM, cpanm, no, .:~/bin:/bin:/usr/bin:/usr/local/bin)
+if test "x$CPANM" = xno; then
 	AC_MSG_ERROR([*** Cannot find cpanm program. Try ``curl -LO http://xrl.us/cpanm''])
 fi
 
@@ -63,16 +63,16 @@ AC_ARG_WITH([perl],
 		[Path to perl binary, ex) /usr/local/bin/perl]),
 	[WITH_PERLPATH=$withval],[WITH_PERLPATH=none])
 if test "x$WITH_PERLPATH" = "xnone"; then
-	AC_PATH_PROG(PERL, perl, :, /usr/local/bin:/usr/bin:/bin)
-	if test "x$PERL" = x; then
+	AC_PATH_PROG(PERL, perl, no, /usr/local/bin:/usr/bin:/bin)
+	if test "x$PERL" = xno; then
 		AC_MSG_ERROR([*** Cannot find perl program])
 	fi
-	AC_PATH_PROG(PERLDOC, perldoc, :, /usr/local/bin:/usr/bin:/bin)
-	if test "x$PERLDOC" = x; then
+	AC_PATH_PROG(PERLDOC, perldoc, no, /usr/local/bin:/usr/bin:/bin)
+	if test "x$PERLDOC" = xno; then
 		AC_MSG_ERROR([*** Cannot find perldoc program])
 	fi
-	AC_PATH_PROG(PROVE, prove, :, /usr/local/bin:/usr/bin:/bin)
-	if test "x$PROVE" = x; then
+	AC_PATH_PROG(PROVE, prove, no, /usr/local/bin:/usr/bin:/bin)
+	if test "x$PROVE" = xno; then
 		PROVE="$PERL -I./dist/lib -I./dist/lib/perl5"
 	else
 		PROVE="$PROVE -r --timer -I./dist/lib -I./dist/lib/perl5"
@@ -81,7 +81,7 @@ else
 	PERL=$WITH_PERLPATH
 	PERLDOC=`dirname $WITH_PERLPATH`/perldoc
 	PROVE=`dirname $WITH_PERLPATH`/prove
-	if test "x$PROVE" = x; then
+	if test "x$PROVE" = xno; then
 		PROVE="$PERL -I./dist/lib -I./dist/lib/perl5"
 	else
 		PROVE="$PROVE -r --timer -I./dist/lib -I./dist/lib/perl5"
