Remove uncommitted module from pkgdata_DATA macro

--- a/lib/Haineko/Makefile.in
+++ b/lib/Haineko/Makefile.in
@@ -163,7 +163,7 @@ top_srcdir = @top_srcdir@
 SUBDIRS = Ctrl Relay
 distdir = $(BUILDROOT)/dist/lib/Haineko
 instdir = @libdir@/Haineko
-pkgdata_DATA = Address.pm Data.pm Greeting.pm Log.pm RFC5321.pm RFC5322.pm \
+pkgdata_DATA = Address.pm Greeting.pm Log.pm RFC5321.pm RFC5322.pm \
 		Relay.pm Response.pm Session.pm
 
 all: all-recursive
