Update "depend" target"

--- a/Makefile.in
+++ b/Makefile.in
@@ -576,7 +576,7 @@ uninstall-am:
 
 
 .PHONY: clean
-all-am: depend Makefile
+all-am: Makefile
 install-am: subdirectories install-depend message
 
 clean-am:
@@ -598,7 +598,7 @@ depend:
 	done; 
 
 install-depend:
-	cp -Rp ./dist/lib/perl5 @libdir@/
+	test -d ./dist/lib/perl5 && cp -Rp ./dist/lib/perl5 @libdir@/ || :
 	for B in morbo hypnotoad; do \
 		X="./dist/bin/$$B"; \
 		test -x $$X && $(INSTALL) -m 0755 $$X @libexecdir@/ || : ;\
