Update "message" target again

--- a/Makefile.in
+++ b/Makefile.in
@@ -622,11 +622,13 @@ message:
 	@echo
 	@echo "  1. Edit @sysconfdir@/haineko.cf and other routing table files"
 	@echo "  2. Start HTTPd"
+	@echo "     > cd @prefix@"
 	@echo "     > export PERL5LIB=@libdir@/perl5"
-	@echo "     > morbo --listen 'http://127.0.0.1:2794' -w @libdir@ -w @sysconfdir@ @prefix@/script/haineko"
+	@echo "     > ./libexec/morbo --listen 'http://127.0.0.1:2794' -w @libdir@ -w @sysconfdir@ @prefix@/script/haineko"
 	@echo "     OR"
+	@echo "     > cd @prefix@"
 	@echo "     > export PERL5LIB=@libdir@/perl5"
-	@echo "     > hypnotoad @prefix@/script/haineko"
+	@echo "     > ./libexec/hypnotoad @prefix@/script/haineko"
 	@echo "  3. Connect http://127.0.0.1:2794"
 	@echo
 	@echo "-----------------------------------------------------------------------------"
