Fix sub directory name: SMTPD

--- a/lib/Haineko/Makefile.am
+++ b/lib/Haineko/Makefile.am
@@ -1,6 +1,6 @@
 # $Id: Makefile.am,v 1.20.2.1 2011/06/20 03:43:39 ak Exp $
 # Copyright (C) 2013 azumakuniyuki
-SUBDIRS = HTTPD SMTPDD
+SUBDIRS = HTTPD SMTPD
 distdir = $(BUILDROOT)/dist/lib/Haineko
 instdir = @libdir@/Haineko
 pkgdatadir = @libdir@/Haineko
