--- a/Makefile.am
+++ b/Makefile.am
@@ -49,9 +49,9 @@ message:
 	@echo "  2. Start HTTPd"
 	@echo "     > cd @prefix@"
 	@echo "     > export PERL5LIB=@libdir@/perl5"
-	@echo "     > ./sbin/hainekod -a ./libexec/haineko.psgi"
-	@echo "     OR"
 	@echo "     > plackup -o '127.0.0.1' -p 2794 -a libexec/haineko.psgi"
+	@echo "     OR"
+	@echo "     > ./sbin/hainekod help"
 	@echo "  3. Connect http://127.0.0.1:2794"
 	@echo
 	@echo "-----------------------------------------------------------------------------"
