Register Haineko/CLI.pm

--- a/lib/Haineko/Makefile.am
+++ b/lib/Haineko/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = HTTPD SMTPD
 distdir = $(BUILDROOT)/dist/lib/Haineko
 instdir = @libdir@/Haineko
 pkgdatadir = @libdir@/Haineko
-pkgdata_DATA = Default.pm Log.pm HTTPD.pm JSON.pm Root.pm Sendmail.pm
+pkgdata_DATA = Default.pm Log.pm HTTPD.pm JSON.pm Root.pm Sendmail.pm CLI.pm
 
 .PHONY: clean
 all-am:
