Update for Haineko 0.2.0

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 # $Id: Makefile.am,v 1.12.2.2 2011/06/20 03:43:39 ak Exp $
 # Copyright (C) 2013 azumakuniyuki
 SYSTEMNAME = Haineko
-SYSVERSION = 0.1.2
-SUBDIRS = etc lib libexec sbin
+SYSVERSION = 0.2.0
+SUBDIRS = bin etc lib libexec
 
 .PHONY: clean
 all-am: Makefile
@@ -24,20 +24,14 @@ depend:
 install-depend:
 	test -d ./dist/lib/perl5 && cp -Rp ./dist/lib/perl5 @libdir@/ || :
 	test -d @libexecdir@ || mkdir -p @libexecdir@
-	for B in morbo hypnotoad; do \
-		X="./dist/bin/$$B"; \
-		test -x $$X && $(INSTALL) -m 0755 $$X @libexecdir@/ || : ;\
-	done
 
 test:
-	$(PROVE) -I@prefix@/lib/perl5 t/
+	LANG=C $(PROVE) -I@prefix@/lib/perl5 t/
 
 subdirectories:
-	mkdir -pm 0755 @localstatedir@/db
 	mkdir -pm 0755 @prefix@/run
 	mkdir -pm 0755 @prefix@/log
 	mkdir -pm 0755 @prefix@/tmp
-	$(CHMOD) g+w  @localstatedir@/db
 
 message:
 	@echo "-----------------------------------------------------------------------------"
@@ -46,12 +40,13 @@ message:
 	@echo " Setting up $(SYSTEMNAME)"
 	@echo
 	@echo "  1. Edit @sysconfdir@/haineko.cf and other routing table files"
-	@echo "  2. Start HTTPd"
+	@echo "  2. Start Haineko server"
 	@echo "     > cd @prefix@"
 	@echo "     > export PERL5LIB=@libdir@/perl5"
 	@echo "     > plackup -o '127.0.0.1' -p 2794 -a libexec/haineko.psgi"
 	@echo "     OR"
-	@echo "     > ./sbin/hainekod help"
+	@echo "     > ./bin/hainekoctl help"
+	@echo "     > ./bin/hainekoctl -d start"
 	@echo "  3. Connect http://127.0.0.1:2794/submit"
 	@echo
 	@echo "-----------------------------------------------------------------------------"
