--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ perl:
 
 before_install:
     - cpanm Test::UsedModules
+    - cpanm -n git://github.com/kan/coveralls-perl.git
+
+script: perl Makefile.PL && make && cover -test
+
+after_success:
+  - cover -report coveralls
 
 notifications:
   recipients:
