--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
     - cpanm Test::UsedModules
     - cpanm -n git://github.com/kan/coveralls-perl.git
 
-script: perl Makefile.PL && make && cover -test
+script: 
+  - cover -test
 
 after_success:
   - cover -report coveralls
