--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     - cpanm -n git://github.com/kan/coveralls-perl.git
 
 script: 
-  - cover -test
+  - make -f Haineko.mk cover-test
 
 after_success:
   - cover -report coveralls
