--- a/lib/Haineko/SMTPD/Relay/Makefile.am
+++ b/lib/Haineko/SMTPD/Relay/Makefile.am
@@ -3,7 +3,8 @@
 distdir = $(BUILDROOT)/dist/lib/Haineko/SMTPD/Relay
 instdir = @prefix@/lib/Haineko/SMTPD/Relay
 pkgdatadir = @libdir@/Haineko/SMTPD/Relay
-pkgdata_DATA = ESMTP.pm SendGrid.pm AmazonSES.pm Mandrill.pm Haineko.pm MX.pm
+pkgdata_DATA = ESMTP.pm SendGrid.pm AmazonSES.pm Mandrill.pm Haineko.pm MX.pm \
+			   Screen.pm
 
 .PHONY: clean
 all-am: 
